--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
 
     <div class="divider">or</div>
 
-    <form id="loginForm" method="POST" action="/api/v1/users/login">
+    <form id="loginForm">
         <input type="email" id="email" name="email" placeholder="Email address" required>
         <input type="password" id="password" name="password" placeholder="Password" required>
 
@@ -28,6 +28,7 @@
 
     <div id="loginError" class="error"></div>
 </div>
-<script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+<script src="{{ url_for('static', filename='auth.js') }}"></script>
+
 </body>
 </html>
