--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,8 @@
 <div class="auth-container">
     <h2>Login</h2>
     <p class="auth-switch">Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
+     <p><a href="{{ url_for('landing') }}">Back to Home</a></p>
+
 
     <button class="social-login">
         <img src="{{ url_for('static', filename='img/google.png') }}" alt="Google logo">
