--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -66,6 +66,7 @@ body {
   cursor: pointer;
   border-radius: 5px;
   transition: background 0.3s;
+  text-decoration: None;
 }
 
 .logout-button:hover {
