--- a/templates/landing.html
+++ b/templates/landing.html
@@ -196,4 +196,5 @@
                 <a href="#">BTC</a>
                 <a href="#">MIDDLE</a>
                 <a href="#">CONNECT with investors</a>
-                <a href="#">
+                <a href="#"></a>
+            </div>
