--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <p class="terms-text">By creating an account you agree to our<br>
-                    <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p>
+                    <a href="#">Terms of Service</a> and <a href="{{ url_for('terms') }}">Privacy Policy</a></p>
 
                     <button type="submit" class="submit-btn">Create Account</button>
                 </form>
