--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,6 @@
 </head>
 <body class="login-page">
     <div class="split-layout">
-        <!-- Left side - Form -->
         <div class="form-side">
             <div class="auth-container">
                 <h2>Login to your account</h2>
@@ -46,7 +45,7 @@
 
 
         <div class="graphic-side" style="background-color: #e8f5e9;">
-            <img src="{{ url_for('static', filename='img/the_guy.png') }}" alt="Computer illustration"><br>
+            <img src="{{ url_for('static', filename='img/stand.png') }}" alt="Computer illustration"><br>
             <div class="welcome">
             <p>Welcome <br>Back</p>
         </div>
